--- a/src/PortfolioContainer/ContactMe/ContactMe.css
+++ b/src/PortfolioContainer/ContactMe/ContactMe.css
@@ -1,5 +1,5 @@
 .main-container {
-    min-height: 100vh;
+    min-height: fit-content;
     /* background-image: url("../../assets/ContactMe/contact_us.jpeg"); */
   
     margin: 100px 0 -450px 0;
