--- a/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -14,8 +14,7 @@
   display: flex;
   width: 100%;
   border-radius: 50px;
-  box-shadow:  32px 32px 64px #b8b8b8,
-               -32px -32px 64px #ffffff;
+  background-color: #f4f4f4;
 }
 
 .container {
@@ -26,7 +25,7 @@
 
 .about-me-details {
   text-align: center;
-  padding: 30px;
+  padding: 50px;
   font-family: "Poppins Regular";
 }
 
@@ -34,14 +33,11 @@
   font-size: 20px;
   font-family: "Poppins SemiBold";
   padding-right: 100px;
+  margin: 80px 0;
 }
 
 .about-me-description {
-  font-size: 18px;
-}
-
-.about-me-highlights {
-  margin: 80px 0;
+  padding: 50px;
 }
 
 .btn {
@@ -63,7 +59,7 @@
   border-radius: 50%;
 }
 .about-me-options .highlighted-btn {
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 /*IPAD PRO RESPONSIVENESS*/
@@ -86,7 +82,7 @@
 
   .about-me-highlights {
     font-size: 16px;
-    padding-right: 0px;
+    padding-right: 0;
   }
 }
 @media only screen and (max-width: 466px) {
